Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119102

Cannot record video using QML or widgets camera example on macOS with built-in camera or iOS device continuity camera

    XMLWordPrintable

Details

    • macOS
    • 8bf41716c (dev), 75a3c3a9d (6.8), da8de2e36 (6.7), b9fc2d534 (tqtc/lts-6.5)

    Description

      MacOS 14.1

      Qt Creator 12.0.0-rc1 (11.0.84)

      Qt version: 

      Qt 6.7.0 (snapshot from dev)
      2023-11-09
      sha1: 72861b5f5740cb2bd650e30f3d23c8fc55ba51da 

      Steps to reproduce:

      1. Build and run camera example app:
        1. QML - https://doc.qt.io/qt-6/qtmultimedia-declarative-camera-example.html
        2. https://doc.qt.io/qt-6/qtmultimedia-camera-example.html
        3. Try to record a video with these apps.

      Expected: The video is recorded

      Actual: Recording stops immediately. No error on QML example. Invalid error on widgets example.

      [hevc_videotoolbox @ 0x7fb84d7e60c0] This device does not support the qmin option. Value ignored.
      [hevc_videotoolbox @ 0x7fb84d7e60c0] This device does not support the qmax option. Value ignored. 

      Reproducibility:  100% 

       
       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-119102
          # Subject Branch Project Status CR V

          Activity

            People

              tpochep Timur Pocheptsov
              lkos Łukasz Kosiorowski
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes