QAVFCamera - skip any resolution adjustments on macOS

Apparently videoOrientation can be reported as portrait, even though
the resolution we want to use is landscape, transposing we end up
with errors coming from hwaccell (where the resolution is not
transposed).

Pick-to: 6.7 6.7.2 6.5
Fixes: QTBUG-119102
Change-Id: I8aa367ccc5e45902244e0393aa0fc0da0b19d920
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 8bf41716c22613589cbe3ef1f06fa43447053174)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>